feat: Moved over the new UI and other changes

--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,5 @@
       "url": "https://github.com/L3-N0X"
     }
   ],
-  "tags": [
-    "spicetify",
-    "dj",
-    "info",
-    "bpm",
-    "key"
-  ]
+  "tags": ["spicetify", "dj", "info", "bpm", "key"]
 }
